--- a/etc/nginx.conf
+++ b/etc/nginx.conf
@@ -1,12 +1,12 @@
-server {
+﻿server {
 
-  listen 80  default;
+  listen 80;
 
   location^ ~ /uploads/ {
     root /home/box/web;
   }
 
-  location~*^.+\.\w+$ {
+  location ~*^.+\.\w+$ {
     root /home/box/web/public;
   }
 
